<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminServices">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        />
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="Services"
                android:textStyle="bold"
                style="?android:textAppearanceLarge"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/back"
                android:layout_below="@+id/text"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text= "@string/plumbing"
                android:background="@drawable/mybutton"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="15dp"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text= "@string/electrical"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/mybutton"
                android:layout_marginBottom="15dp"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text= "@string/carpentry"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/mybutton"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>


        <!--<fragment-->
            <!--android:id="@+id/fragment"-->
            <!--android:name="com.phenix.haroz.rgukt_n.OneFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:clickable="true"-->
            <!--android:layout_height="match_parent" />-->
</LinearLayout>