<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tech_login">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:id="@+id/img"
                app:srcCompat="@drawable/tech"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/img"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_id"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70pt"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/mybutton"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/background_dark"
                android:textStyle="normal" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvalready"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="110dp"
                    android:text="For any Queries.."
                    android:textColor="@color/colorPrimary"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_toRightOf="@id/tvalready"
                    android:id="@+id/tvcontact"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_height="wrap_content"
                    android:text="Contact Us"
                    android:textStyle="bold"
                    android:textColor="#383838"
                    android:textSize="14dp"
                    />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>